--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,12 @@
     <string name="app_name">WanAndroid</string>
     <string name="press_again_to_exit">Press once again to exit</string>
 
-    <string name="feeds">feeds</string>
-    <string name="profile">profile</string>
+    <string name="home">Home</string>
+    <string name="me">Me</string>
     <string name="setting">Settings</string>
+
+    <string name="home_article">最新博文</string>
+    <string name="home_project">最新项目</string>
 
     <string name="login_title">NiceHub</string>
     <string name="username">Username</string>
