--- a/shared/src/main/res/values-ar/strings.xml
+++ b/shared/src/main/res/values-ar/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="retry">إعادة المحاولة</string>
     <string name="no_more_data">لا مزيد من البيانات</string>
+    <string name="loading_finish">اكتمل التحميل</string>
 </resources>
