--- a/shared/src/main/res/values-zh/strings.xml
+++ b/shared/src/main/res/values-zh/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="retry">重试</string>
     <string name="no_more_data">没有更多数据</string>
+    <string name="loading_finish">加载完成</string>
 </resources>
