--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="retry">Retry</string>
     <string name="no_more_data">No more data</string>
+    <string name="loading_finish">Loading finish</string>
 </resources>
