--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,14 +3,14 @@
     <string name="app_name">WanAndroid</string>
     <string name="press_again_to_exit">再按一次退出</string>
 
-    <string name="home">Home</string>
-    <string name="me">Me</string>
+    <string name="home">首页</string>
+    <string name="me">我</string>
     <string name="setting">设置</string>
 
     <string name="home_article">最新博文</string>
     <string name="home_project">最新项目</string>
 
-    <string name="login_title">NiceHub</string>
+    <string name="login_title">玩安卓</string>
     <string name="username">用户名</string>
     <string name="password">密码</string>
     <string name="login">登录</string>
@@ -28,15 +28,14 @@
     <string name="settings_theme_dark">深色</string>
     <string name="settings_theme_battery">根据省电模式设置</string>
 
-    <string name="contributions">贡献</string>
-    <string name="repositories_search">仓库搜索</string>
-
     <string name="no_data">没有数据</string>
 
-    <string name="followers">关注者</string>
-    <string name="following">关注中</string>
+    <string name="coins">硬币</string>
+    <string name="ranking">排行</string>
 
-    <string name="follow">关注</string>
-    <string name="unfollow">取消关注</string>
+    <string name="time">时间</string>
+    <string name="author">作者</string>
+    <string name="share_people">分享人</string>
+    <string name="anonymous">佚名</string>
 
 </resources>
