--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="demo">My Demo</string>
     <string name="opencv">OpenCv</string>
+    <string name="gray">Gray</string>
 
     <string name="home_article">أحدث بلوق وظائف</string>
     <string name="home_project">أحدث مشروع</string>
