--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <string name="demo">My Demo</string>
     <string name="opencv">OpenCv</string>
+    <string name="gray">Gray</string>
 
     <string name="home_article">New Article</string>
     <string name="home_project">New Project</string>
