--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -8,11 +8,13 @@
     <string name="setting">设置</string>
 
     <string name="demo">我的Demo</string>
-    <string name="opencv">OpenCv</string>
     <string name="jni">Jni</string>
-    <string name="gray">灰度图</string>
-    <string name="erode">腐蚀效果</string>
-    <string name="blur">模糊效果</string>
+
+    <string name="opencv">OpenCv</string>
+    <string name="opencv_gray">灰度图</string>
+    <string name="opencv_erode_dilate">腐蚀和膨胀效果</string>
+    <string name="opencv_blur">模糊效果</string>
+    <string name="opencv_canny">边缘检测</string>
 
     <string name="home_article">最新博文</string>
     <string name="home_project">最新项目</string>
