--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -15,6 +15,7 @@
     <string name="opencv_erode_dilate">Erode and dilate</string>
     <string name="opencv_blur">Blur</string>
     <string name="opencv_canny">Canny</string>
+    <string name="opencv_idcard">IdCard</string>
 
     <string name="home_article">أحدث بلوق وظائف</string>
     <string name="home_project">أحدث مشروع</string>
