--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -15,6 +15,7 @@
     <string name="opencv_erode_dilate">腐蚀和膨胀效果</string>
     <string name="opencv_blur">模糊效果</string>
     <string name="opencv_canny">边缘检测</string>
+    <string name="opencv_idcard">身份证号码提取</string>
 
     <string name="home_article">最新博文</string>
     <string name="home_project">最新项目</string>
