--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="opencv_idcard">IdCard</string>
 
     <string name="ffmpeg">FFmpeg</string>
+    <string name="websocket">WebSocket</string>
 
     <string name="home_article">New Article</string>
     <string name="home_project">New Project</string>
