--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -18,6 +18,7 @@
     <string name="opencv_idcard">身份证号码提取</string>
 
     <string name="ffmpeg">FFmpeg</string>
+    <string name="websocket">WebSocket</string>
 
     <string name="home_article">最新博文</string>
     <string name="home_project">最新项目</string>
