--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="home">منزل</string>
     <string name="me">أنا</string>
+    <string name="category">الفئة</string>
     <string name="setting">الإعدادات</string>
 
     <string name="demo">My Demo</string>
