--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <string name="home">Home</string>
     <string name="me">Me</string>
+    <string name="category">Category</string>
     <string name="setting">Settings</string>
 
     <string name="demo">My Demo</string>
