--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="home">首页</string>
     <string name="me">我</string>
+    <string name="category">分类</string>
     <string name="setting">设置</string>
 
     <string name="demo">我的Demo</string>
