--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -35,6 +35,7 @@
     <string name="animation">动画</string>
     <string name="fade">渐变</string>
     <string name="slide">滑动</string>
+    <string name="noanim">无动画</string>
 
     <string name="settings_theme_title">选择主题</string>
     <string name="settings_theme_system">系统默认</string>
