--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <string name="ffmpeg">FFmpeg</string>
     <string name="websocket">WebSocket</string>
+    <string name="camera">CameraX</string>
 
     <string name="home_article">New Article</string>
     <string name="home_project">New Project</string>
