--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -20,6 +20,7 @@
 
     <string name="ffmpeg">FFmpeg</string>
     <string name="websocket">WebSocket</string>
+    <string name="camera">CameraX</string>
 
     <string name="home_article">أحدث بلوق وظائف</string>
     <string name="home_project">أحدث مشروع</string>
