--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -20,6 +20,7 @@
 
     <string name="ffmpeg">FFmpeg</string>
     <string name="websocket">WebSocket</string>
+    <string name="camera">CameraX</string>
 
     <string name="home_article">最新博文</string>
     <string name="home_project">最新项目</string>
