--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -23,6 +23,8 @@
     <string name="camera">CameraX</string>
     <string name="vsposed">VirtualXposed</string>
 
+    <string name="clone_apps">克隆App</string>
+
     <string name="home_article">最新博文</string>
     <string name="home_project">最新项目</string>
 
