--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
-<resources>
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">WanAndroid</string>
     <string name="press_again_to_exit">Press once again to exit</string>
 
@@ -21,6 +22,8 @@
     <string name="websocket">WebSocket</string>
     <string name="camera">CameraX</string>
     <string name="vsposed">VirtualXposed</string>
+
+    <string name="clone_apps">Clone Apps</string>
 
     <string name="home_article">New Article</string>
     <string name="home_project">New Project</string>
