--- a/vxposed/src/main/res/values/strings.xml
+++ b/vxposed/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="engine_process_name">:x</string>
     <string name="virtual_installer">VirtualPackage Installer</string>
     <string name="owner_name">Admin</string>
