--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -8,7 +8,7 @@
     <string name="category">分类</string>
     <string name="setting">设置</string>
 
-    <string name="demo">我的Demo</string>
+    <string name="demo">Demo</string>
     <string name="jni">Jni</string>
 
     <string name="opencv">OpenCv</string>
