--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -8,7 +8,7 @@
     <string name="category">الفئة</string>
     <string name="setting">الإعدادات</string>
 
-    <string name="demo">My Demo</string>
+    <string name="demo">Demo</string>
     <string name="jni">Jni</string>
 
     <string name="opencv">OpenCv</string>
