--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="category">Category</string>
     <string name="setting">Settings</string>
 
-    <string name="demo">My Demo</string>
+    <string name="demo">Demo</string>
     <string name="jni">Jni</string>
 
     <string name="opencv">OpenCv</string>
