--- a/shared/src/main/res/values-ar/strings.xml
+++ b/shared/src/main/res/values-ar/strings.xml
@@ -8,6 +8,7 @@
     <string name="error_activity_error_occurred_explanation">An unexpected error occurred.\nSorry for the inconvenience.</string>
     <string name="error_activity_restart_app">Restart app</string>
     <string name="error_activity_close_app">Close app</string>
+    <string name="error_activity_error_file">Error Log File </string>
     <string name="error_activity_error_details">Error details</string>
     <string name="error_activity_error_details_title">Error details</string>
     <string name="error_activity_error_details_close">Close</string>
