--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -25,6 +25,8 @@
     <string name="flutter">Flutter</string>
     <string name="crash">Crash</string>
 
+    <string name="file_manager">文件管理器</string>
+
     <string name="clone_apps">克隆App</string>
 
     <string name="home_article">最新博文</string>
@@ -34,7 +36,7 @@
     <string name="username">用户名</string>
     <string name="password">密码</string>
     <string name="login">登录</string>
-    <string name="logout">注销</string>
+    <string name="logout">退出登录</string>
 
     <string name="languages">语言</string>
     <string name="theme">主题</string>
