--- a/shared/src/main/res/values-zh/strings.xml
+++ b/shared/src/main/res/values-zh/strings.xml
@@ -9,6 +9,7 @@
     <string name="error_activity_restart_app">重新启动应用</string>
     <string name="error_activity_close_app">关闭应用</string>
     <string name="error_activity_error_details">错误详情</string>
+    <string name="error_activity_error_file">日志文件</string>
     <string name="error_activity_error_details_title">错误详情</string>
     <string name="error_activity_error_details_close">关闭</string>
     <string name="error_activity_error_details_copy">复制到剪贴板</string>
